crates/nash-config/src/snapshots/nash_config__config__test_defaults__tests_distinguish_absent_trace_setting_from_explicit_silent-2.snap
---
source: crates/nash-config/src/config.rs
description: "{\"type\":\"application\",\"traceLevel\":\"silent\"}"
---
{
  "type": "application",
  "traceLevel": "silent",
  "compilerTraces": false,
  "sourceDirectories": [
    "src"
  ],
  "dependencies": {},
  "testDependencies": {}
}
