crates/nash-config/src/snapshots/nash_config__config__test_defaults__tests_distinguish_absent_trace_setting_from_explicit_silent.snap
---
source: crates/nash-config/src/config.rs
description: "{\"type\":\"application\"}"
---
{
  "type": "application",
  "compilerTraces": false,
  "sourceDirectories": [
    "src"
  ],
  "dependencies": {},
  "testDependencies": {}
}
